# bitz-pool

./: Cargo.toml  rust-toolchain.toml
logs/: bitz-pool-server.log.2025-06-04  bitz-pool-submissions.log.2025-06-04
migrations/2024-08-11-151101_create_miners/: down.sql  up.sql
migrations/2024-08-12-000144_create_challenges/: down.sql  up.sql
migrations/2024-08-12-002816_create_submissions/: down.sql  up.sql
migrations/2024-08-12-003544_create_txns/: down.sql  up.sql
migrations/2024-08-12-004131_create_claims/: down.sql  up.sql
migrations/2024-08-13-014749_create_rewards/: down.sql  up.sql
migrations/2024-08-14-235001_create_earnings/: down.sql  up.sql
migrations/2025-01-13-153156_difficulty_in_earning/: up.sql
migrations/2025-06-16-234736_worker_name_in_earning/: down.sql  up.sql
src/: app_database.rs  app_rr_database.rs  bitz_utils.rs  main.rs  message.rs  models.rs  schema.rs  utils.rs
src/systems/: claim_system.rs  client_message_handler_system.rs  handle_ready_clients_system.rs  mod.rs  pool_mine_success_system.rs  pool_submission_system.rs  proof_tracking_system.rs
