[package]
name = "bitz-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
dotenv = "0.15.0"
clap = { version = "4.5.14", features = ["derive"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.5", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
diesel = { version = "2.2.3", features = ["mysql", "chrono"] }
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3.30"
base64 = "0.22.1"
rand = "0.8.5"
bytemuck = "1.23.0"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bincode = "2.0.1"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-program = "2.2.1"
solana-transaction-status = "2.2.7"
solana-account-decoder = "2.2.7"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
eore-api  = "3.6.2"
# eore-boost-api = "4.0.1"
steel = "4.0"
drillx = "2.1.0"
# axum = { version = "0.8.4", features = ["ws"] }
# axum-extra = { version = "0.10.1", features = ["typed-header"] }
# eore-api  = "3.6.2"